--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,4 +5,6 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-    - run: echo " hai from job1"
+    - run: |
+       echo "hai from job1"
+       echo "secret is {{ secrets.ONE }}"
